syntax = "proto3";

package rivet.backend.pkg.party.publicity_for_user;

import "proto/common.proto";
import "proto/backend/party.proto";

message Request {
    rivet.common.Uuid user_id = 1;
    repeated rivet.common.Uuid party_ids = 2;
}

message Response {
    message Party {
        rivet.common.Uuid party_id = 1;
        rivet.backend.party.Party.PublicityLevel publicity = 2;
    }

    repeated Party parties = 1;
}
